Descomenté el sketch.js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   </head>
   <body>
-   <!-- <script src="sketch.js"></script> -->
+   <script src="sketch.js"></script>
     <h1>Welcome</h1>
   <h4>Say Hi! by clicking</h4>
   <p>What´s your favorite song? </p>
